# SystemC

./: AndOrGate.txt  CMakeLists.txt  HelloWelt  RS Latch v2  SystemFIFO.txt  TLM.txt  bus.h  exor.h  exor_main.cpp  nand.h  nand_main.cpp
HelloWorld/: HelloWelt  HelloWelt.cpp
Meine Vorbereitung/: Compile.txt  RSLatch.txt  SimpleFIFO.txt  TLM_LT.txt
RSLatch/: CMakeLists.txt  Makefile  RSLatch  RSLatch.cpp  RSLatch.txt  RS_Latch_Trace.vcd  testRSLatch  testRSLatch.cpp
SCVP.Exercise3/: CMakeLists.txt  state_machine.cpp  state_machine.h
SCVP.Exercise4/: CMakeLists.txt  main.cpp  place.h  subnet.h  transition.h
SCVP.Exercise5/: CMakeLists.txt  kpn.cpp  kpn.h  main.cpp
SCVP.Exercise6/: main.cpp  memory.h  processor.h
SCVP.Exercise8/: CMakeLists.txt
SimpleFIFO/: CMakeLists.txt  Chapter3.txt  SimpleFIFO.cpp  launch.json
TLM_LT/: CMakeLists.txt  TLM.txt  TLM_LT.cpp  testTLM_LT  testTLM_LT.cpp
